# tred

./: .gitignore  Changelog.org  README.org  pyproject.toml
docs/: concepts.org  convo.org  data.org  develop.org  internals.org  jupyter.org  notes.org  response.org  tred-details.dot  units.org
docs/examinations/: 00_overview.md  01_algorithms.md  02_bugs.md  03_gpu_efficiency.md  04_memory.md  99_open_questions.md
src/tred/: blocking.py  bsb.py  chunking.py  cli.py  convo.py  drift.py  graph.py  indexing.py  io.py  io_nd.py  loaders.py  partitioning.py  raster.py  readout.py  recombination.py  response.py  sparse.py  toy_gpu3.py  types.py  util.py  web.py
src/tred/plots/: __init__.py  convo.py  drift.py  full.py  graph.py  graph_effq.py  graph_fd.py  graph_opt.py  integ.py  (+6 more)
tests/: README.org  convert_ndhdf5_to_small.py  test_blocking.py  test_bsb.py  test_chunking.py  test_convo.py  test_indexing.py  test_partitioning.py  test_pipeline.py  test_sparse.py  test_steploader.py  test_util.py
tests/accuracy/: config_10x10_1pt.yaml  config_10x10_2pt.yaml  config_10x10_4pt.yaml  config_8x8_1pt.yaml  run.sh
tests/benchmark/: config_10x10.yaml  config_10x10_100_10.yaml  config_10x10_100_50.yaml  config_10x10_300_50.yaml  output_10x10.log.bak  plot_log_metrics.py  run.sh  run_all.sh
tests/convo/: perf_convo.py  perf_fft.py  test_convo.py  test_partitioning.py  test_response.py  toy_conv.py  toy_conv2d.py  toy_conv3d.py
tests/drift/: README.md  benchmark_drift.py  test_absorb.py  test_diffuse.py  test_drift.py  test_drifter.py  test_transport.py
tests/effq/: FIXME.md  README.md  point_line_duality.py  studies.org  test_depos.py  test_effq.py  test_grid.py  test_raster_dtype.py  test_raster_steps.py  three_pts_interpolation.org
tests/fdcomp/: config.yaml  run.sh
tests/nd_geometry/: multi_tile_layout-3.0.40.yaml  ndlar-module.yaml
tests/nd_loader/: test_geo.py  test_io_dataset.py
tests/optimizer/: config_for_optimizer.yaml  plot_edepsim.py  plot_lifetime.py  run.sh
tests/pgun_signal_processing/: config_nburst4_noises.yaml  config_noises.yaml  config_noises_offset16.yaml  config_noises_offset8.yaml  config_nonoises.yaml  dump_nominal_to_bee.py  run.sh  run_interval_average.sh
tests/playground/: 2x2.yaml  NDresponse.py  anal.py  many_muons.py  multi_tile_layout-2.4.16_v4.yaml  plot.py  simple_config.yaml  single_muon.py
tests/raster/: README.md  test_raster_graph.py
tests/single_point_charge/: config.yaml  config2.yaml  plot_burst.py  print_charge.py  run.sh
tests/sparse/: perf_chunking.py  perf_indexing.py  test_blocking.py  test_chunking.py  test_gradient.py  test_indexing.py  test_sparse.py
tests/test_nd_response/: field_respnose_with_official.ipynb  field_response_comparisons.ipynb
(+120 files in other folders)
