# unless commented otherwise, minimum versions are merely what was available at
# time of development.  Older versions may work.

[project]
name = "tred"
version = "0.1.0"
description = "Three dimensional response detector simulation"
readme = {file = "README.org", content-type = "text/org"}
requires-python = ">=3.11"
dependencies = [
  "click>=8.1.7",
  "hist[plot]>=2.8.1",
  "numpy>=2.1.3",
  "scikit-learn>=1.6.1",
  "torch>=2.5.1",
]

[project.optional-dependencies]
hdf = [ "h5py>=3.12.1" ]
numpy = [ "numpy>=2.1.2" ]
matplotlib = [ "matplotlib>=3.9.2" ]
all = [ "h5py>=3.12.1", "numpy>=2.1.2", "matplotlib>=3.9.2" ]

[project.scripts]
tred = "tred.cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124/"
explicit = true


# [tool.uv.sources]
# torch = [
#   { index = "pytorch-cpu",  marker = "sys_platform == 'darwin'" },
#   { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" },
# ]


# [[tool.uv.index]]
# name = "pytorch-cpu"
# url = "https://download.pytorch.org/whl/cpu/"
# explicit = true

# [[tool.uv.index]]
# name = "pytorch-cu124"
# url = "https://download.pytorch.org/whl/cu124/"
# explicit = true

[dependency-groups]
dev = [
    "k3d>=2.16.1",
    "matplotlib>=3.10.0",
    "pytest>=8.3.4",
]
